--- a/hr-portal/package.json
+++ b/hr-portal/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.1",
+    "redux-persist": "^6.0.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
